# cppgraphics

./: CHANGELOG.md  LICENCE.md  README.md
docs/: Cpp_setup.md  How_to_build.md  Introduction.md
examples/emscripten/: README.md  main.cpp
examples/imgui/: README.md  main.cpp
examples/manual_build/: CMakeLists.txt  README.md  main.cpp
examples/performance/: README.md  main.cpp
projects/: README.md
projects/000_template_macos/: CMakeLists.txt
projects/000_template_windows_msvc2019/: main.cpp
src/: cppgraphics.cpp  cppgraphics.hpp
